20190125
========
#39879 - OAuth 2.0 credentials can only be updated once
#41521 - Added profile errorprone to execute error prone
#41523 - Check and fix errors and CVE with error-prone and dependency check

20180927
========
#39540 - NullPointerException when access token is not found when refreshing OAuth 2.0 credentials
#39579 - Separate "entity collection" and "entity name" in parameters so that different collections of an entity can be accessed

20180903
========
#39047 - Client secret for OAuth2 should be a hidden parameter
#39069 - Authentication cache for OAuth not working as expected
#36303 - Error retrieving Decimal values from an OData4 source
#39213 - "Refr. Token Auth. Method" should have a default value option
#39237 - Fix inheritance between entities (attribute BaseType)
#39329 - Support TLS > 1.0 for java 7

20180820
========
#38628 - Send client credentials through basic authentication or in the body of the response
#29886 - OData 4 wrapper authentication pass-through

20180712
========
#38328 - Added support for HTTPS connections

20180529
========
#29882 - Add service format configuration in OData 4 Wrapper
#35771 - Custom header support for OData 4 Wrapper

20171030
========
#29881 - OAuth2 support in OData4 wrapper
#34159 - Add support for optimistic concurrency in odata4
#34210 - Add support for Custom Query options

20170503
========
#31630 - Connection against the Odata 4 service does not work

20170404
========
#31788 - Entity name and url can be different
#31700 - Review fields being represented as array's toString()

20161222
========
#30519 - Improved reaction at response fields that don't match the projected fields.

20160825
========
#20168 - Sharepoint integration: limit the number of relationships to expand
#29883 - In a projection is the first element is a related entity returns null

20160719
========
First version of odata4 wrapper