@@ -30,7 +30,7 @@
     <packaging>jar</packaging>
     <name>denodo-odata4-wrapper-6.0</name>
 	<description>${project.artifactId}</description>
-    <version>20190125</version>
+    <version>20190328</version>
     <!-- *************************** -->
     <!-- PROFILES -->
     <!-- *************************** -->
