@@ -1,3 +1,7 @@
+20190328
+========
+#42541 - Increase of the log trace in the OAuth tokens management
+
 20190125
 ========
 #39879 - OAuth 2.0 credentials can only be updated once
